# snake

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: frag.glsl  vert.glsl
include/: apple.h  constants.h  entity.h  game.h  snake.h  utils.h
src/: apple.cpp  entity.cpp  game.cpp  main.cpp  snake.cpp
